--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mc.enjoy">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,10 +22,24 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".permission.PermissionActivity"/>
+        <activity android:name=".module.BootAnimationActivity"/>
+        <activity android:name=".module.EthActivity"/>
+        <activity android:name=".module.EthTetherActivity"/>
+        <activity android:name=".module.FirmwareActivity"/>
+        <activity android:name=".module.HardwareKeyBoardActivity"/>
+        <activity android:name=".module.HardwareStatusActivity"/>
+        <activity android:name=".module.HomeActivity"/>
+        <activity android:name=".module.WhiteAppActivity"/>
+        <activity android:name=".module.NetCoexistenceActivity"/>
+        <activity android:name=".module.PowerActivity"/>
+        <activity android:name=".module.RotationActivity"/>
+        <activity android:name=".module.SecureActivity"/>
+        <activity android:name=".module.SystemUiActivity"/>
+        <activity android:name=".module.TimeActivity"/>
+        <activity android:name=".module.WatchDogActivity"/>
     </application>
-
 </manifest>
