--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation files('libs/enjoySDK.aar')
+//    implementation files('libs/enjoySDK.aar')
 //    implementation project(":enjoySDK")
+    implementation 'com.github.Hangzhou-Maichong-Technology:Enjoy:1.0.0'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.blankj:utilcode:1.30.5'
